# funktor

./: .dockerignore  .gitignore  .hlint.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cabal.project  docker-compose.yml  fourmolu.yaml  funktor.cabal
.github/workflows/: ci.yml  deploy.yml
app/: Main.hs
docs/: ROADMAP.md  SPECULATIVE.md
scripts/: check-coverage.sh  precommit-hs.sh
src/: Funktor.hs
src/Funktor/: Audio.hs  Audio.hs.bak  Grid.hs  Harmony.hs  Live.hs  UI.hs
src/Funktor/Audio/: Effects.hs  Envelope.hs  Oscillator.hs  SC.hs  Scheduler.hs  Sine.hs  State.hs  Timbre.hs  Voice.hs
src/Funktor/Core/: Pattern.hs  Stream.hs  Types.hs
src/Funktor/Generative/: CellularAutomata.hs  Euclidean.hs  Markov.hs
src/Funktor/Grid/: Binding.hs
src/Funktor/Hardware/: Launchpad.hs  MIDI.hs
src/Funktor/Harmony/: Analysis.hs  Voicing.hs
src/Funktor/Live/: Reload.hs  Session.hs
synthdefs/: funktor.scd
test/: GridBindingSpec.hs  GridSpec.hs  HardwareSpec.hs  HarmonySpec.hs  LaunchpadSpec.hs  LiveSpec.hs  Main.hs  UISpec.hs
test/Audio/: AudioSpec.hs  EffectsSpec.hs  EnvelopeSpec.hs  OscillatorSpec.hs  SchedulerSpec.hs  SineSpec.hs  StateSpec.hs  TimbreSpec.hs  VoiceSpec.hs
test/Core/: PatternSpec.hs  StreamSpec.hs  TypesSpec.hs
test/Generative/: CellularAutomataSpec.hs  EuclideanSpec.hs  MarkovSpec.hs
test/Harmony/: AnalysisSpec.hs  VoicingSpec.hs
test/Live/: ReloadSpec.hs  SessionSpec.hs
test/Test/Utils/: Arbitrary.hs
test/Utils/: Arbitrary.hs
