cabal-version:      3.14
name:               funktor
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

-- extra-source-files:

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints


library
    import:           warnings
    exposed-modules:  Funktor
                      Funktor.Core.Pattern
                      Funktor.Core.Types

    other-extensions: RecordWildCards
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: GHC2024

executable funktor
    import:           warnings
    main-is:          Main.hs
    other-extensions: RecordWildCards

    build-depends:
        base ^>=4.21.0.0,
        funktor

    hs-source-dirs:   app
    default-language: GHC2024

test-suite funktor-test
    import:           warnings
    default-language: GHC2024
    other-extensions: RecordWildCards
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        funktor
