cabal-version:      3.14
name:               funktor
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

-- extra-source-files:

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints


library
    import:           warnings
    exposed-modules:  Funktor
                      Funktor.Audio
                      Funktor.Audio.State
                      Funktor.Audio.Envelope
                      Funktor.Audio.Effects
                      Funktor.Audio.Oscillator
                      Funktor.Audio.Scheduler
                      Funktor.Audio.Voice
                      Funktor.Audio.Sine
                      Funktor.Core.Pattern
                      Funktor.Core.Stream
                      Funktor.Core.Types
                      Funktor.Generative.CellularAutomata
                      Funktor.Generative.Euclidean
                      Funktor.Generative.Markov
                      Funktor.Grid
                      Funktor.Grid.Binding
                      Funktor.Harmony
                      Funktor.Harmony.Analysis
                      Funktor.Harmony.Voicing
                      Funktor.Hardware.Launchpad
                      Funktor.Hardware.MIDI
                      Funktor.Live
                      Funktor.Live.Reload
                      Funktor.Live.Session
                      Funktor.UI

    other-extensions: RecordWildCards
    build-depends:    base >= 4.21 && < 4.23
                    , containers >= 0.6
                    , random >= 1.2
                    , sdl2 >= 2.5
                    , stm >= 2.5
                    , vector >= 0.12
    hs-source-dirs:   src
    default-language: GHC2024

executable funktor
    import:           warnings
    main-is:          Main.hs
    other-extensions: RecordWildCards

    build-depends:
        base >= 4.21 && < 4.23,
        funktor

    hs-source-dirs:   app
    default-language: GHC2024

test-suite funktor-test
    import:           warnings
    default-language: GHC2024
    other-extensions: RecordWildCards, ScopedTypeVariables
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.21 && < 4.23,
        funktor,
        HUnit >= 1.6,
        tasty >= 1.5,
        tasty-hunit >= 0.10,
        tasty-quickcheck >= 0.10,
        QuickCheck >= 2.14,
