cabal-version:      3.14
name:               funktor
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

-- extra-source-files:

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints


flag midi
    description: Build the PortMidi-backed Funktor.Hardware.MIDI module and
                 wire it into Funktor.Live. Disable for headless cloud builds
                 (no MIDI hardware, no PortMidi C dependency).
    default:     True
    manual:      True


library
    import:           warnings
    exposed-modules:  Funktor
                      Funktor.Audio
                      Funktor.Audio.SC
                      Funktor.Audio.Scheduler
                      Funktor.Audio.Timbre
                      Funktor.Core.Stream
                      Funktor.Core.Types
                      Funktor.Generative.CellularAutomata
                      Funktor.Generative.Euclidean
                      Funktor.Generative.Markov
                      Funktor.Grid
                      Funktor.Grid.Binding
                      Funktor.Harmony
                      Funktor.Harmony.Analysis
                      Funktor.Harmony.Voicing
                      Funktor.Live
                      Funktor.Live.Reload
                      Funktor.Live.Session
                      Funktor.UI

    other-extensions: RecordWildCards, CPP
    default-extensions: OverloadedRecordDot, DuplicateRecordFields
    build-depends:    base >= 4.21 && < 4.23
                    , async >= 2.2 && < 2.3
                    , bytestring >= 0.11
                    , containers >= 0.6
                    , foreign-store >= 0.2 && < 0.3
                    , fsnotify >= 0.4 && < 0.5
                    , hosc >= 0.18 && < 0.22
                    , random >= 1.2
                    , stm >= 2.5
                    , vector >= 0.12
    hs-source-dirs:   src
    default-language: GHC2024

    if flag(midi)
        exposed-modules: Funktor.Hardware.MIDI
                         Funktor.Hardware.Launchpad
        build-depends:   PortMidi >= 0.2 && < 0.3
        cpp-options:     -DMIDI_ENABLED

executable funktor
    import:           warnings
    main-is:          Main.hs
    other-extensions: RecordWildCards
    default-extensions: OverloadedRecordDot, DuplicateRecordFields

    build-depends:
        base >= 4.21 && < 4.23,
        funktor

    hs-source-dirs:   app
    default-language: GHC2024

test-suite funktor-test
    import:           warnings
    default-language: GHC2024
    other-extensions: RecordWildCards, ScopedTypeVariables, CPP
    default-extensions: OverloadedRecordDot, DuplicateRecordFields
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Utils.Arbitrary
                      Core.TypesSpec
                      Core.StreamSpec
                      Audio.SchedulerSpec
                      Audio.TimbreSpec
                      Generative.CellularAutomataSpec
                      Generative.EuclideanSpec
                      Generative.MarkovSpec
                      GridSpec
                      GridBindingSpec
                      Harmony.AnalysisSpec
                      Harmony.VoicingSpec
                      HarmonySpec
                      LiveSpec
                      Live.ReloadSpec
                      Live.SessionSpec
                      UISpec
    build-depends:
        base >= 4.21 && < 4.23,
        funktor,
        HUnit >= 1.6,
        bytestring >= 0.11,
        containers >= 0.6,
        directory >= 1.3,
        filepath >= 1.4,
        tasty >= 1.5,
        tasty-hunit >= 0.10,
        tasty-quickcheck >= 0.10,
        QuickCheck >= 2.14,
        random >= 1.2,
        stm >= 2.5,
        vector >= 0.12,

    if flag(midi)
        other-modules:   HardwareSpec
                         LaunchpadSpec
        build-depends:   PortMidi >= 0.2 && < 0.3
        cpp-options:     -DMIDI_ENABLED
